# learning_notes

./: .gitignore  LICENSE  README.md  pyproject.toml
cheatsheets/: README.md
cheatsheets/Markdown/: README.md
cheatsheets/Python/: README.md  pyinstaller.md
cheatsheets/Wireshark/: README.md
cheatsheets/python/: python packaging.md  python_highlevel.drawio
cheatsheets/python_t/: bdist_wheel and sdist.md  python virtual environment.md
cmake_notes/: CMakeLists.txt  README.md
cmake_notes/examples/hello_world/: CMakeLists.txt  main.cpp
dash_notes/: README.md
dash_notes/min_app/: main.py
ecal_tool_notes/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
ecal_tool_notes/notes/hello_world/cpp/hello_world_publisher/: CMakeLists.txt
ecal_tool_notes/notes/hello_world/cpp/hello_world_subscriber/: CMakeLists.txt
ecal_tool_notes/notes/hello_world/py/: hello_world_publisher.py  hello_world_subscriber.py
ecal_tool_notes/notes/hello_world_proto/: gen_proto_files.bat
ecal_tool_notes/notes/hello_world_proto/cpp/hello_world_proto_publisher/: CMakeLists.txt  main.cpp
ecal_tool_notes/notes/hello_world_proto/cpp/hello_world_proto_subscriber/: CMakeLists.txt  main.cpp
ecal_tool_notes/notes/hello_world_proto/py/: hello_world_proto_publisher.py  hello_world_proto_subscriber.py
ecal_tool_notes/notes/hello_world_proto/py/proto_messages/: hello_world_pb2.py
ecal_tool_notes/scripts/: clean_cmake_build_script.bat  venv_setup_dev.bat
gui_image_collection/: README.md
nicegui_notes/: README.md
nicegui_notes/hello_world_app/: build.py  main.py
nicegui_notes/hello_world_native_app/: build.py  main.py
python_notes/: python_notes.ipynb  python_usecases.ipynb
python_notes/data/: dummy_file.txt
vector_tool_notes/: .gitignore  README.md
vector_tool_notes/canoe_basics/: README.md  canoe_basics.md
vector_tool_notes/canoe_demo_cfg/DiagNode/: SimDiagECU.can
vector_tool_notes/capl_basics/: README.md  demo_cfg.cfg
vector_tool_notes/capl_basics/examples/: program_01.can  program_02.can  program_03.can  program_05.can  program_06.can
vector_tool_notes/py_canoe_basics/: python_basics_questions.ipynb
vector_tool_notes/vn_hw/: vn_hw_io_piggy.md
vector_tools/canoe_demo_cfg/: demo_cfg.cfg
vector_tools/capl_basics/Panels/: sys_var_demo_panel.xvp
vector_tools/capl_basics/examples/: program_04.can  program_07.can  program_08.can  program_09.can
vector_tools/database_basics/: databsae_basics.ipynb
vector_tools/py_canoe_basics/: README.md
